--- a/index.html
+++ b/index.html
@@ -54,16 +54,35 @@ font-size:200%;
     ( 5 / 1 ) </p>
 <table class="center">
   <tr>
-    <td style="background-color:#ababab;"><a href="apple.html">تفاحة</a></td>
-    <td style="background-color:#ababab;"><a href="banana.html">موزه</a></td>
+  <td><a href="apple.html">تفاحة</a></td>
+  <td><img src="images\apple.jpg" alt="" width="50" height="50"></td>
   </tr>
-    <td style="background-color:#ababab;"><a href="grape.html">عنب</a></td>
-    <td style="background-color:#ababab;"><a href="orange.html">برتقال</a></td>
-  </tr>
-    <td style="background-color:#ababab;" colspan="2"><a href="watermelon.html">بطيخ</a></td>
+ <tr>
+  <td><a href="banana.html">موزه</a></td>
+  <td><img src="images\banana.jpg" alt="" width="50" height="50"></td>
+</tr>
+<tr>
+  <td><a href="grape.html">عنب</a></tdtdtd>
+  <td><img src="images\grape.jpg" alt="" width="50" height="50"></td>
+ </tr>
+ <tr>
+  <td><a href="orange.html">برتقال</a></td>
+  <td><img src="images\orange.jpg" alt="" width="50" height="50"></td>
+</tr>
+ <tr>
+  <td><a href="watermelon.html">بطيخ</a></td>
+  <td><img src="images\watermelon.jpg" alt="" width="50" height="50"></td>
+</tr>
+  <td><a href="watch.html" target="_self">اضغط هنا لمشاهدة فيديو</a></td>
   </tr>
   <tr>
-    <th style="background-color:#ababab;" colspan="2"><a href="watch.html" target="_self">فيديو</a></th>
+    <td><img src="images\apple.jpg" alt="" width="50" height="50">
+<img src="images\banana.jpg" alt="" width="50" height="50">
+<img src="images\grape.jpg" alt="" width="50" height="50">
+<img src="images\orange.jpg" alt="" width="50" height="50">
+<img src="images\watermelon.jpg" alt="" width="50" height="50">
+    </td>
+
   </tr>
 </table>
 
