--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       div {
   margin: 0px;
-background-color:#ababab;  padding: 10px;
+background-color:#3e32a8;  padding: 10px;
   text-align: center;
 font-size:200%;
 }
