--- a/banana.html
+++ b/banana.html
@@ -24,7 +24,7 @@
 }
       div {
   margin: 0px;
-  background-color:#ababab;  padding: 60px;
+  background-color:#3e32a8;  padding: 60px;
   text-align: center;
 font-size:200%;
 }
