--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     table, th, td {
   border-collapse: collapse;
+  border: 1px solid;
+  border-collapse: collapse;
+
 
 }
 
@@ -52,36 +55,19 @@ font-size:200%;
     <p style=text-align:center;font-size:180%;>زياد عوض الله السلمي <br>
     ( 5 / 1 ) </p>
 <table class="center">
-  <tr>
+  <tr style="background-color:#d4d4d4;">
   <td><a href="apple.html">تفاحة</a></td>
-  <td><img src="images\apple.jpg" alt="" width="50" height="50"></td>
-  </tr>
- <tr>
   <td><a href="banana.html">موزه</a></td>
-  <td><img src="images\banana.jpg" alt="" width="50" height="50"></td>
-</tr>
-<tr>
-  <td><a href="grape.html">عنب</a></tdtdtd>
-  <td><img src="images\grape.jpg" alt="" width="50" height="50"></td>
- </tr>
- <tr>
-  <td><a href="orange.html">برتقال</a></td>
-  <td><img src="images\orange.jpg" alt="" width="50" height="50"></td>
-</tr>
- <tr>
-  <td><a href="watermelon.html">بطيخ</a></td>
-  <td><img src="images\watermelon.jpg" alt="" width="50" height="50"></td>
-</tr>
-  <td><a href="watch.html" target="_self">اضغط هنا لمشاهدة فيديو</a></td>
   </tr>
-  <tr>
-    <td><img src="images\apple.jpg" alt="" width="50" height="50">
-<img src="images\banana.jpg" alt="" width="50" height="50">
-<img src="images\grape.jpg" alt="" width="50" height="50">
-<img src="images\orange.jpg" alt="" width="50" height="50">
-<img src="images\watermelon.jpg" alt="" width="50" height="50">
-    </td>
-
+  <tr style="background-color:#d4d4d4;">
+  <td><a href="grape.html">عنب</a></td>
+  <td><a href="orange.html">برتقال</a></td>
+  </tr>
+  <tr style="background-color:#d4d4d4;">
+  <td colspan="2"><a href="watermelon.html">بطيخ</a></td>
+</tr>
+<tr style="background-color:#d4d4d4;">
+  <td colspan="2"><a href="watch.html" target="_self">اضغط هنا لمشاهدة فيديو</a></td>
   </tr>
 </table>
 
